fixed codeoverflow in code for responsiveness mode

--- a/style.css
+++ b/style.css
@@ -220,9 +220,9 @@ header {
 
 
 /** OUR MISSION **/
-section {
-	width: 90%;
-	margin: 80px;
+.ourmission {
+	width: 100%;
+
 }
 
 .title {
@@ -236,7 +236,6 @@ h1 {
 
 .li {
 	font-family: 'Aclonica', sans-serif;
-
 }
 
 .title p {
